# book-sample

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  version_control - Proofread Sample by Nikola Kojcinovic.qmd
chapters/: .gitignore  _quarto.yml  index.qmd  version_control.qmd
